--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
         android:src="@drawable/applogo"
-    />
+        />
     <TextView
         android:id="@+id/app_slogan"
         android:layout_width="220dp"
@@ -23,9 +23,9 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="140dp"
         android:layout_marginEnd="88dp"
-        android:text="Find, Discover, Choose and Buy anything online"
+        android:text="Find, choose and buy anything online"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="22sp"
         android:textStyle="bold|italic"
         />
@@ -33,8 +33,7 @@
         android:id="@+id/main_login_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
+        android:layout_above="@+id/seller_begin"
         android:layout_marginBottom="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginLeft="15dp"
@@ -42,7 +41,7 @@
         android:padding="20dp"
         android:textAllCaps="false"
         android:textSize="18sp"
-        android:text="Already have an Account? Login"
+        android:text="Bạn đã có tài khoản ? Đăng nhập"
         android:textColor="@android:color/white"
         />
     <Button
@@ -53,11 +52,24 @@
         android:layout_marginBottom="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginLeft="15dp"
-        android:background="@drawable/input_design"
+        android:background="@drawable/buttons"
         android:padding="20dp"
         android:textAllCaps="false"
         android:textSize="18sp"
-        android:text="Join Now"
+        android:text="Đăng ký"
+        android:textColor="@android:color/white"
+        />
+    <TextView
+        android:id="@+id/seller_begin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:text="Bạn muốn trở thành người bán?"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
+        android:textSize="18dp"
+        android:textStyle="bold"
         android:textColor="@android:color/white"
         />
 </RelativeLayout>
