--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/login"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    android:background="@drawable/welcome"
+    tools:context=".Buyers.LoginActivity">
 
     <ImageView
         android:id="@+id/login_applogo"
@@ -25,10 +25,10 @@
         android:layout_marginTop="30dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:hint="Phone Number"
+        android:hint="Số điện thoại"
         android:inputType="number"
-        android:textColor="@color/colorPrimaryDark"
-        android:textColorHint="@color/colorPrimaryDark"
+        android:textColorHint="@color/colorText"
+        android:textColor="@color/colorText"
         android:textSize="17sp"
         android:textStyle="bold"
         />
@@ -43,10 +43,10 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="6dp"
-        android:hint="Password"
+        android:hint="Mật khẩu"
         android:inputType="textPassword"
-        android:textColor="@color/colorPrimaryDark"
-        android:textColorHint="@color/colorPrimaryDark"
+        android:textColorHint="@color/colorText"
+        android:textColor="@color/colorText"
         android:textSize="17sp"
         android:textStyle="bold"
         />
@@ -64,10 +64,9 @@
             android:id="@+id/remember_me_chkb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Material.Drawable.CheckBox"
-            android:text="Remember me"
-            android:textColor="@color/colorPrimaryDark"
-            app:cbd_strokeColor="@color/colorPrimaryDark"
+            android:text="Lưu mật khẩu"
+            android:textColor="@color/colorText"
+            android:buttonTint="@color/colorPrimaryDark"
             android:gravity="center_vertical"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -78,11 +77,11 @@
             android:id="@+id/forget_password_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FOrget Password ?"
-            android:textColor="@color/colorPrimaryDark"
+            android:text="Quên mật khẩu ?"
+            android:textColor="@color/colorText"
             android:textSize="17dp"
             android:textStyle="bold"
-            android:layout_marginLeft="80dp"
+            android:layout_marginLeft="100dp"
             />
 
     </LinearLayout>
@@ -99,7 +98,7 @@
         android:padding="17dp"
         android:textAllCaps="false"
         android:textSize="18sp"
-        android:text="Login"
+        android:text="Dăng nhập"
         android:textColor="@android:color/white"
         />
 
@@ -107,10 +106,10 @@
         android:id="@+id/admin_panel_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="I'm an Admin"
+        android:text="Quản trị"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/login_btn"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorText"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_marginLeft="80dp"
@@ -120,10 +119,10 @@
         android:id="@+id/not_admin_panel_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="I'm not an Admin"
+        android:text="Người dùng"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/login_btn"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorText"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_marginLeft="80dp"
