--- a/app/src/main/res/layout/activity_seller_product_category.xml
+++ b/app/src/main/res/layout/activity_seller_product_category.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminCategoryActivity">
+    tools:context=".Sellers.SellerProductCategoryActivity">
 
     <TextView
         android:id="@+id/slogan_category"
@@ -25,27 +25,27 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/slogan_category"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/t_shirts"
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:layout_marginRight="20dp"
             android:src="@drawable/tshirts" />
 
         <ImageView
             android:id="@+id/sports_t_shirts"
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:src="@drawable/sports" />
 
         <ImageView
             android:id="@+id/dresses"
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:layout_marginLeft="20dp"
             android:src="@drawable/female_dresses" />
 
@@ -59,27 +59,27 @@
         android:orientation="horizontal"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:layout_marginTop="45dp">
+        android:layout_marginTop="20dp">
 
         <ImageView
             android:id="@+id/sweather"
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:layout_marginRight="20dp"
             android:src="@drawable/sweather"
             />
 
         <ImageView
             android:id="@+id/glasses"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_width="100dp"
+            android:layout_height="80dp"
             android:src="@drawable/glasses"
             />
 
         <ImageView
             android:id="@+id/handbags"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_width="100dp"
+            android:layout_height="80dp"
             android:layout_marginLeft="20dp"
             android:src="@drawable/handbags"
             />
@@ -94,11 +94,11 @@
         android:orientation="horizontal"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:layout_marginTop="45dp">
+        android:layout_marginTop="20dp">
 
         <ImageView
             android:id="@+id/hats_caps"
-            android:layout_width="100dp"
+            android:layout_width="80dp"
             android:layout_height="100dp"
             android:layout_marginRight="20dp"
             android:src="@drawable/hats"
@@ -107,7 +107,7 @@
         <ImageView
             android:id="@+id/shoes"
             android:layout_width="90dp"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:src="@drawable/shoes"
             android:layout_marginStart="16dp"
             />
@@ -115,7 +115,7 @@
         <ImageView
             android:id="@+id/headphones"
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:layout_marginLeft="20dp"
             android:src="@drawable/headphones"
             />
@@ -129,32 +129,31 @@
         android:orientation="horizontal"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:layout_marginTop="45dp">
+        android:layout_marginTop="20dp">
 
         <ImageView
             android:id="@+id/laptops"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_width="100dp"
+            android:layout_height="80dp"
             android:layout_marginRight="20dp"
             android:src="@drawable/laptops"
             />
         <ImageView
             android:id="@+id/watches"
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:src="@drawable/watches"
             />
 
         <ImageView
             android:id="@+id/mobilePhones"
             android:layout_width="90dp"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:layout_marginLeft="20dp"
             android:src="@drawable/mobiles"
             />
 
 
     </LinearLayout>
-
 
 </RelativeLayout>
