--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsActivity">
+    tools:context=".Buyers.SettingsActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_settings"
@@ -17,33 +17,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-           <RelativeLayout
-               android:layout_width="match_parent"
-               android:layout_height="match_parent">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-               <TextView
-                   android:id="@+id/close_settings_btn"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Close"
-                   android:textColor="@android:color/white"
-                   android:textSize="20dp"
-                   android:layout_alignParentStart="true"
-                   android:textStyle="bold"
-                   />
-               <TextView
-                   android:id="@+id/update_setting_btn"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_marginRight="12dp"
-                   android:text="Update"
-                   android:textColor="@android:color/white"
-                   android:textSize="20dp"
-                   android:layout_alignParentEnd="true"
-                   android:textStyle="bold"
-                   />
+                <TextView
+                    android:id="@+id/close_settings_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Đóng"
+                    android:textColor="@android:color/white"
+                    android:textSize="20dp"
+                    android:layout_alignParentStart="true"
+                    android:textStyle="bold"
+                    />
+                <TextView
+                    android:id="@+id/update_setting_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="12dp"
+                    android:text="Thay đổi"
+                    android:textColor="@android:color/white"
+                    android:textSize="20dp"
+                    android:layout_alignParentEnd="true"
+                    android:textStyle="bold"
+                    />
 
-           </RelativeLayout>
+            </RelativeLayout>
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -65,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Change Profile"
+        android:text="Thay đổi ảnh"
         android:textSize="20dp"
         android:textColor="@android:color/black"
         android:layout_centerHorizontal="true"
@@ -77,7 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/profile_image_change_btn"
-        android:hint="Phone Number..."
+        android:hint="Số điện thoại..."
         android:layout_marginLeft="15dp"
         android:layout_marginTop="20dp"
         />
@@ -86,7 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/settings_phone_number"
-        android:hint="Full name..."
+        android:hint="Họ và tên..."
         android:layout_marginLeft="15dp"
         android:layout_marginTop="20dp"
         />
@@ -95,7 +95,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/settings_full_name"
-        android:hint="Address..."
+        android:hint="Dịa chỉ..."
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp"
+        />
+    <Button
+        android:id="@+id/security_questions_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/settings_address"
+        android:text="Cài đặt câu hỏi bảo mật"
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="20dp"
         />
