--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -18,6 +18,7 @@
         android:id="@+id/user_profile_image"
         android:layout_width="96dp"
         android:layout_height="96dp"
+        android:layout_gravity="center"
         android:src="@drawable/profile"
         app:civ_border_width="2dp"
         app:civ_border_color="@android:color/white" />
@@ -28,7 +29,9 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:textSize="20sp"
-        android:text="User Name"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:text="Tên người dùng"
         android:layout_marginLeft="3dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
