--- a/app/src/main/res/layout/seller_item_layout.xml
+++ b/app/src/main/res/layout/seller_item_layout.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/product_name"
+            android:id="@+id/product_seller_name"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:text="Product Name"
@@ -25,37 +25,48 @@
             android:textColor="@color/colorPrimaryDark"/>
 
         <ImageView
-            android:id="@+id/product_image"
+            android:id="@+id/product_seller_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_below="@+id/product_name"
+            android:layout_below="@+id/product_seller_name"
             android:scaleType="centerCrop"
             android:layout_marginTop="4dp"/>
 
 
         <TextView
-            android:id="@+id/product_price"
+            android:id="@+id/product_seller_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/product_image"
+            android:layout_below="@+id/product_seller_image"
             android:text="Product Price"
             android:textAlignment="center"
             android:textStyle="bold"
             android:textSize="20dp"
-            android:textColor="@color/colorPrimaryDark"
-            android:paddingBottom="5dp"/>
+            android:textColor="@color/colorPrimaryDark"/>
 
-<!--        <TextView-->
-<!--            android:id="@+id/product_description"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_below="@+id/product_price"-->
-<!--            android:text="Product Description"-->
-<!--            android:layout_marginTop="2dp"-->
-<!--            android:textAlignment="center"-->
-<!--            android:textSize="16dp"-->
-<!--            android:textStyle="bold"-->
-<!--            android:textColor="@color/colorPrimaryDark"/>-->
+        <TextView
+            android:id="@+id/product_seller_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/product_seller_price"
+            android:text="Product Description"
+            android:layout_marginTop="2dp"
+            android:textAlignment="center"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"/>
+
+        <TextView
+            android:id="@+id/product_status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/product_seller_description"
+            android:text="Product Status"
+            android:layout_marginTop="2dp"
+            android:textAlignment="center"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"/>
 
 
     </RelativeLayout>
